--- a/var/spack/repos/builtin/packages/wrf/Makefile.patch
+++ b/var/spack/repos/builtin/packages/wrf/Makefile.patch
@@ -1,5 +1,5 @@
---- Makefile	2018-06-08 19:39:31.000000000 -0500
-+++ /home/baber/wrf-patches/Makefile.patched	2018-11-02 13:33:12.273662388 -0500
+--- a/Makefile	2018-06-08 19:39:31.000000000 -0500
++++ b/Makefile	2018-11-02 13:33:12.273662388 -0500
 @@ -906,14 +906,14 @@
  	@ echo '--------------------------------------'
  	( cd frame ; $(MAKE) $(J) LLIST="$(LINKLIST)" framework ; \
